Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -141,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 159,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T02:57:41.210914Z",
-     "start_time": "2019-06-18T02:57:41.168777Z"
+     "end_time": "2019-06-18T03:01:33.240185Z",
+     "start_time": "2019-06-18T03:01:33.192792Z"
     },
     "code_folding": [
      60,
@@ -194,7 +194,7 @@
     "            strides=[1,self.stride,self.stride,1],padding=self.padding\n",
     "        )\n",
     "\n",
-    "        dimension_shape = (0,1)\n",
+    "        dimension_shape = (2,3)\n",
     "        grad_pos      = tf.where(grad>0,tf.ones_like(grad),tf.zeros_like(grad))\n",
     "        grad_pos_mean = tf.reduce_sum(grad_pos*grad,dimension_shape,keepdims=True)/tf.reduce_sum(grad_pos,dimension_shape,keepdims=True)\n",
     "        \n",
@@ -298,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 160,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T02:57:41.885274Z",
-     "start_time": "2019-06-18T02:57:41.621953Z"
+     "end_time": "2019-06-18T03:01:33.806765Z",
+     "start_time": "2019-06-18T03:01:33.631080Z"
     }
    },
    "outputs": [],
@@ -326,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 161,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T02:57:42.921743Z",
-     "start_time": "2019-06-18T02:57:42.135632Z"
+     "end_time": "2019-06-18T03:01:34.816213Z",
+     "start_time": "2019-06-18T03:01:34.111237Z"
     }
    },
    "outputs": [],
@@ -379,17 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T02:57:43.680902Z",
-     "start_time": "2019-06-18T02:57:43.162709Z"
+     "start_time": "2019-06-18T03:01:34.656Z"
     }
    },
    "outputs": [],
    "source": [
     "# start the session\n",
-    "sess = tf.InteractiveSession(config=tf.ConfigProto(log_device_placement=True))\n",
+    "# sess = tf.InteractiveSession(config=tf.ConfigProto(log_device_placement=True))\n",
     "sess.run(tf.global_variables_initializer())"
    ]
   },
@@ -398,7 +397,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T02:57:43.553Z"
+     "start_time": "2019-06-18T03:01:35.263Z"
     }
    },
    "outputs": [
@@ -406,33 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current: 1\tTrain Acc: 0.1885999995842576\tTrain Cost: 2.1738227128982546\tTest Acc: 0.2831250003539026\tTest Cost: 1.9658320143818855\tLR: 0.0008\n",
-      "Current: 2\tTrain Acc: 0.300400001257658\tTrain Cost: 1.8803677928447724\tTest Acc: 0.36775000104680655\tTest Cost: 1.7477138832211494\tLR: 0.0008\n",
-      "Current: 3\tTrain Acc: 0.39879999935626986\tTrain Cost: 1.65123716711998\tTest Acc: 0.39175000032410023\tTest Cost: 1.6857748217880726\tLR: 0.0008\n",
-      "Current: 4\tTrain Acc: 0.43619999825954436\tTrain Cost: 1.5377761125564575\tTest Acc: 0.4429999996908009\tTest Cost: 1.5326613135635854\tLR: 0.0008\n",
-      "Current: 5\tTrain Acc: 0.4712000003457069\tTrain Cost: 1.4379759693145753\tTest Acc: 0.4482499996200204\tTest Cost: 1.5187872789800168\tLR: 0.0008\n",
-      "Current: 6\tTrain Acc: 0.5140000006556511\tTrain Cost: 1.3497056305408477\tTest Acc: 0.4518749978393316\tTest Cost: 1.4774072006344796\tLR: 0.0008\n",
-      "Current: 7\tTrain Acc: 0.5388000020384789\tTrain Cost: 1.281060054898262\tTest Acc: 0.48524999916553496\tTest Cost: 1.4141823172569274\tLR: 0.0008\n",
-      "Current: 8\tTrain Acc: 0.5698000055551529\tTrain Cost: 1.2126802217960357\tTest Acc: 0.4756250001490116\tTest Cost: 1.4496647737920285\tLR: 0.0008\n",
-      "Current: 9\tTrain Acc: 0.5818000030517578\tTrain Cost: 1.1846365803480148\tTest Acc: 0.5215000005438923\tTest Cost: 1.3268100142478942\tLR: 0.0008\n",
-      "Current: 10\tTrain Acc: 0.5963999983668328\tTrain Cost: 1.1119657444953919\tTest Acc: 0.5308749984949828\tTest Cost: 1.3143324837088586\tLR: 0.0008\n",
-      "Current: 11\tTrain Acc: 0.614200002849102\tTrain Cost: 1.0911799138784408\tTest Acc: 0.5136249987408519\tTest Cost: 1.3677414175122977\tLR: 0.0008\n",
-      "Current: 12\tTrain Acc: 0.6318000051379203\tTrain Cost: 1.0237687706947327\tTest Acc: 0.5276250014081597\tTest Cost: 1.3256283979862928\tLR: 0.0008\n",
-      "Current: 13\tTrain Acc: 0.6404000043869018\tTrain Cost: 0.9914861100912095\tTest Acc: 0.5313750019297003\tTest Cost: 1.336924035847187\tLR: 0.0008\n",
-      "Current: 14\tTrain Acc: 0.667800001502037\tTrain Cost: 0.956076693534851\tTest Acc: 0.5348749991506339\tTest Cost: 1.3119680613279343\tLR: 0.0008\n",
-      "Current: 15\tTrain Acc: 0.6740000051259994\tTrain Cost: 0.901762592792511\tTest Acc: 0.5300000011920929\tTest Cost: 1.3387639697641134\tLR: 0.0008\n",
-      "Current: 16\tTrain Acc: 0.6958000028133392\tTrain Cost: 0.8680845463275909\tTest Acc: 0.5418750029057264\tTest Cost: 1.3256021950393915\tLR: 0.0008\n",
-      "Current: 17\tTrain Acc: 0.7032000035047531\tTrain Cost: 0.8364268177747727\tTest Acc: 0.5427499994635582\tTest Cost: 1.3299675479531288\tLR: 0.0008\n",
-      "Current: 18\tTrain Acc: 0.7216000020503998\tTrain Cost: 0.7855646288394929\tTest Acc: 0.5462500005960464\tTest Cost: 1.3604614771902561\tLR: 0.0008\n",
-      "Current: 19\tTrain Acc: 0.7378000020980835\tTrain Cost: 0.7464704206585884\tTest Acc: 0.5358750009909272\tTest Cost: 1.4046566762030124\tLR: 0.0008\n",
-      "Current: 20\tTrain Acc: 0.7432000005245208\tTrain Cost: 0.7284539425373078\tTest Acc: 0.5548750007525086\tTest Cost: 1.3239441052079202\tLR: 0.0008\n",
-      "Current: 21\tTrain Acc: 0.7579999989271164\tTrain Cost: 0.6994156944751739\tTest Acc: 0.541750000230968\tTest Cost: 1.3817936923354863\tLR: 0.0008\n",
-      "Current: 22\tTrain Acc: 0.777599995136261\tTrain Cost: 0.6316024506092072\tTest Acc: 0.5438750013709068\tTest Cost: 1.4412902727723123\tLR: 0.0008\n",
-      "Current: 23\tTrain Acc: 0.790999995470047\tTrain Cost: 0.5941345417499542\tTest Acc: 0.558625003695488\tTest Cost: 1.3915119826793672\tLR: 0.0008\n",
-      "Current: 24\tTrain Acc: 0.7953999954462051\tTrain Cost: 0.5763339528441429\tTest Acc: 0.5495000023394823\tTest Cost: 1.4284826390445233\tLR: 0.0008\n",
-      "Current: 25\tTrain Acc: 0.8073999941349029\tTrain Cost: 0.5480469039082527\tTest Acc: 0.5372500002384186\tTest Cost: 1.4846401002258063\tLR: 0.0008\n",
-      "Current: 26\tTrain Acc: 0.81719999730587\tTrain Cost: 0.5255057847499848\tTest Acc: 0.5478749999776482\tTest Cost: 1.5280321266502142\tLR: 0.0008\n",
-      "Current Iter : 27/30 batch : 7750/8000 acc : 0.44 cost : 1.80051985\r"
+      "Current Iter : 1/30 batch : 1150/5000 acc : 0.18 cost : 2.2038608\r"
      ]
     }
    ],
