Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -405,7 +405,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Iter : 1/30 batch : 1150/5000 acc : 0.18 cost : 2.2038608\r"
+      "Current: 1\tTrain Acc: 0.18520000014454127\tTrain Cost: 2.1597115063667296\tTest Acc: 0.16174999980721622\tTest Cost: 2.188957466185093\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.27620000056922434\tTrain Cost: 1.8896143960952758\tTest Acc: 0.31325000142678616\tTest Cost: 1.8223919726908206\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.3534000013768673\tTrain Cost: 1.720861245393753\tTest Acc: 0.3742500009015203\tTest Cost: 1.6673618890345097\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.40939999982714653\tTrain Cost: 1.5753769969940186\tTest Acc: 0.43149999929592014\tTest Cost: 1.5475994057953357\tLR: 0.0008\n",
+      "Current: 5\tTrain Acc: 0.44559999972581865\tTrain Cost: 1.4996031546592712\tTest Acc: 0.4212499991059303\tTest Cost: 1.5358703508973122\tLR: 0.0008\n",
+      "Current: 6\tTrain Acc: 0.46639999866485593\tTrain Cost: 1.4334611976146698\tTest Acc: 0.453249997459352\tTest Cost: 1.4890184983611108\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.5089999973773957\tTrain Cost: 1.3492302751541139\tTest Acc: 0.475874999165535\tTest Cost: 1.4297997288405895\tLR: 0.0008\n",
+      "Current: 8\tTrain Acc: 0.5268000009655952\tTrain Cost: 1.2883809095621108\tTest Acc: 0.4758749993517995\tTest Cost: 1.4184365898370743\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.5479999989271164\tTrain Cost: 1.248237394094467\tTest Acc: 0.5031249988824129\tTest Cost: 1.3666551843285561\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.5662000051140785\tTrain Cost: 1.1999714529514314\tTest Acc: 0.5219999995082617\tTest Cost: 1.3292089704424144\tLR: 0.0008\n",
+      "Current: 11\tTrain Acc: 0.5842000043392181\tTrain Cost: 1.1506657749414444\tTest Acc: 0.5281250005587935\tTest Cost: 1.29137622974813\tLR: 0.0008\n",
+      "Current: 12\tTrain Acc: 0.5958000022172928\tTrain Cost: 1.1258009380102159\tTest Acc: 0.5185000009834766\tTest Cost: 1.339269559457898\tLR: 0.0008\n",
+      "Current Iter : 13/30 batch : 7250/8000 acc : 0.66 cost : 0.97642775\r"
      ]
     }
    ],
