Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -401,7 +401,19 @@
      "start_time": "2019-06-18T03:04:41.976Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current: 1\tTrain Acc: 0.1677999998629093\tTrain Cost: 2.219789899587631\tTest Acc: 0.23012500004842878\tTest Cost: 2.0844263628125193\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.24259999997913836\tTrain Cost: 2.031204309463501\tTest Acc: 0.27949999962002037\tTest Cost: 1.9632594838738442\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.30980000019073484\tTrain Cost: 1.8853226137161254\tTest Acc: 0.31587500059977175\tTest Cost: 1.8337770603597163\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.3504000014066696\tTrain Cost: 1.7641406345367432\tTest Acc: 0.3666250010952353\tTest Cost: 1.7426438741385937\tLR: 0.0008\n",
+      "Current Iter : 5/30 batch : 2900/5000 acc : 0.34 cost : 1.6431274\r"
+     ]
+    }
+   ],
    "source": [
     "# start the training \n",
     "for iter in range(1,num_epoch+1):\n",
