Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -326,11 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 171,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:04:41.791874Z",
-     "start_time": "2019-06-18T03:04:41.079516Z"
+     "end_time": "2019-06-18T03:06:26.020200Z",
+     "start_time": "2019-06-18T03:06:25.336560Z"
     }
    },
    "outputs": [],
@@ -341,15 +341,15 @@
     "is_train = tf.placeholder_with_default(True,())\n",
     "iter_num = tf.placeholder_with_default(1.0,())\n",
     "\n",
-    "layer1  = l1. feedforward(x,padding='VALID',stride=2)    \n",
-    "layer2  = l2.feedforward(layer1,padding='VALID') \n",
-    "layer3  = l3.feedforward(layer2,padding='VALID',stride=2); \n",
+    "layer1  = l1. feedforward(x,stride=2)    \n",
+    "layer2  = l2.feedforward(layer1) \n",
+    "layer3  = l3.feedforward(layer2); \n",
     "\n",
-    "layer4  = l4.feedforward(layer3,padding='VALID');      \n",
-    "layer5  = l5.feedforward(layer4,padding='VALID');      \n",
-    "layer6  = l6.feedforward(layer5,padding='VALID',stride=2)\n",
+    "layer4  = l4.feedforward(layer3,stride=2);      \n",
+    "layer5  = l5.feedforward(layer4);      \n",
+    "layer6  = l6.feedforward(layer5)\n",
     "\n",
-    "layer7  = l7.feedforward(layer6,padding='VALID')\n",
+    "layer7  = l7.feedforward(layer6)\n",
     "layer8  = l8.feedforward(layer7)\n",
     "layer9  = l9.feedforward(layer8)\n",
     "\n",
@@ -358,7 +358,7 @@
     "cost         = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(logits=final_global,labels=y))\n",
     "accuracy     = tf.reduce_mean(tf.cast(tf.equal(tf.argmax(final_soft, 1), tf.argmax(y, 1)),tf.float32) )\n",
     "\n",
-    "gradient     = tf.tile((final_soft-y)[:,None,None,:],(1,6,6,1))\n",
+    "gradient     = tf.tile((final_soft-y)[:,None,None,:],(1,24,24,1))\n",
     "\n",
     "grad9, grad9_up  = l9. backprop(gradient,iter_num)\n",
     "grad8, grad8_up  = l8. backprop(grad9,iter_num)\n",
@@ -379,11 +379,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T03:04:42.367873Z",
-     "start_time": "2019-06-18T03:04:41.867408Z"
+     "start_time": "2019-06-18T03:06:25.863Z"
     }
    },
    "outputs": [],
@@ -398,7 +397,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:04:41.976Z"
+     "start_time": "2019-06-18T03:06:26.166Z"
     }
    },
    "outputs": [
@@ -406,11 +405,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current: 1\tTrain Acc: 0.1677999998629093\tTrain Cost: 2.219789899587631\tTest Acc: 0.23012500004842878\tTest Cost: 2.0844263628125193\tLR: 0.0008\n",
-      "Current: 2\tTrain Acc: 0.24259999997913836\tTrain Cost: 2.031204309463501\tTest Acc: 0.27949999962002037\tTest Cost: 1.9632594838738442\tLR: 0.0008\n",
-      "Current: 3\tTrain Acc: 0.30980000019073484\tTrain Cost: 1.8853226137161254\tTest Acc: 0.31587500059977175\tTest Cost: 1.8337770603597163\tLR: 0.0008\n",
-      "Current: 4\tTrain Acc: 0.3504000014066696\tTrain Cost: 1.7641406345367432\tTest Acc: 0.3666250010952353\tTest Cost: 1.7426438741385937\tLR: 0.0008\n",
-      "Current Iter : 5/30 batch : 2900/5000 acc : 0.34 cost : 1.6431274\r"
+      "Current: 1\tTrain Acc: 0.5129999994859099\tTrain Cost: 3.6023982548713684\tTest Acc: 0.17987499970477075\tTest Cost: 2.220224565267563\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.22179999988526106\tTrain Cost: 1.983291826248169\tTest Acc: 0.29337500017136336\tTest Cost: 1.8332760363817215\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.27900000095367433\tTrain Cost: 1.8196872198581695\tTest Acc: 0.30925000067800285\tTest Cost: 1.773939885944128\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.3103999991714954\tTrain Cost: 1.7510241210460662\tTest Acc: 0.3176250007934868\tTest Cost: 1.741663933545351\tLR: 0.0008\n",
+      "Current Iter : 5/30 batch : 4200/5000 acc : 0.38 cost : 1.5926579\r"
      ]
     }
    ],
