Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -379,10 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:08:25.370Z"
+     "end_time": "2019-06-18T03:08:26.989161Z",
+     "start_time": "2019-06-18T03:08:26.395566Z"
     }
    },
    "outputs": [],
@@ -400,7 +401,19 @@
      "start_time": "2019-06-18T03:08:25.750Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current: 1\tTrain Acc: 0.1169999996945262\tTrain Cost: 2.304918417930603\tTest Acc: 0.12124999987427146\tTest Cost: 2.28516643345356\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.11779999919235706\tTrain Cost: 2.2846944761276244\tTest Acc: 0.11187499961815775\tTest Cost: 2.28115990459919\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.15839999955147505\tTrain Cost: 2.2217458045482634\tTest Acc: 0.20362500024493785\tTest Cost: 2.1236160419881345\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.24960000030696392\tTrain Cost: 1.9551248741149903\tTest Acc: 0.2938750010449439\tTest Cost: 1.8575290717184543\tLR: 0.0008\n",
+      "Current Iter : 5/30 batch : 4050/5000 acc : 0.18 cost : 1.8486459\r"
+     ]
+    }
+   ],
    "source": [
     "# start the training \n",
     "for iter in range(1,num_epoch+1):\n",
