Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "# declare hyper parameter\n",
     "learning_rate = 0.0008 ; beta1 = 0.9; beta2 = 0.999; adam_e = 1e-8\n",
-    "num_epoch     = 30    ; batch_size = 50 ; print_size = 1; \n",
+    "num_epoch     = 30    ; batch_size = 10 ; print_size = 1; \n",
     "channel_sizes = 96 "
    ]
   },
@@ -410,7 +410,16 @@
       "Current: 2\tTrain Acc: 0.11779999919235706\tTrain Cost: 2.2846944761276244\tTest Acc: 0.11187499961815775\tTest Cost: 2.28115990459919\tLR: 0.0008\n",
       "Current: 3\tTrain Acc: 0.15839999955147505\tTrain Cost: 2.2217458045482634\tTest Acc: 0.20362500024493785\tTest Cost: 2.1236160419881345\tLR: 0.0008\n",
       "Current: 4\tTrain Acc: 0.24960000030696392\tTrain Cost: 1.9551248741149903\tTest Acc: 0.2938750010449439\tTest Cost: 1.8575290717184543\tLR: 0.0008\n",
-      "Current Iter : 5/30 batch : 4050/5000 acc : 0.18 cost : 1.8486459\r"
+      "Current: 5\tTrain Acc: 0.28460000053048135\tTrain Cost: 1.8289039945602417\tTest Acc: 0.3005000000819564\tTest Cost: 1.7764002531766891\tLR: 0.0008\n",
+      "Current: 6\tTrain Acc: 0.30940000116825106\tTrain Cost: 1.7585566771030425\tTest Acc: 0.33050000164657833\tTest Cost: 1.7438722215592861\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.3302000017464161\tTrain Cost: 1.7029830133914947\tTest Acc: 0.352375001180917\tTest Cost: 1.684840203821659\tLR: 0.0008\n",
+      "Current: 8\tTrain Acc: 0.35360000148415566\tTrain Cost: 1.6503205370903016\tTest Acc: 0.37024999912828205\tTest Cost: 1.6152210861444474\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.3668000000715256\tTrain Cost: 1.6189945995807649\tTest Acc: 0.3922500004060566\tTest Cost: 1.594759898632765\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.4014000014960766\tTrain Cost: 1.5737555611133576\tTest Acc: 0.41662499960511923\tTest Cost: 1.5479104436933995\tLR: 0.0008\n",
+      "Current: 11\tTrain Acc: 0.412399999499321\tTrain Cost: 1.5460058057308197\tTest Acc: 0.39149999972432853\tTest Cost: 1.589216297864914\tLR: 0.0008\n",
+      "Current: 12\tTrain Acc: 0.41799999922513964\tTrain Cost: 1.5202853667736054\tTest Acc: 0.41962500093504784\tTest Cost: 1.5482873931527137\tLR: 0.0008\n",
+      "Current: 13\tTrain Acc: 0.4359999991953373\tTrain Cost: 1.4911201643943786\tTest Acc: 0.42812500018626454\tTest Cost: 1.4978426396846771\tLR: 0.0008\n",
+      "Current Iter : 14/30 batch : 3600/5000 acc : 0.32 cost : 1.7255648\r"
      ]
     }
    ],
