Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -419,7 +419,9 @@
       "Current: 11\tTrain Acc: 0.412399999499321\tTrain Cost: 1.5460058057308197\tTest Acc: 0.39149999972432853\tTest Cost: 1.589216297864914\tLR: 0.0008\n",
       "Current: 12\tTrain Acc: 0.41799999922513964\tTrain Cost: 1.5202853667736054\tTest Acc: 0.41962500093504784\tTest Cost: 1.5482873931527137\tLR: 0.0008\n",
       "Current: 13\tTrain Acc: 0.4359999991953373\tTrain Cost: 1.4911201643943786\tTest Acc: 0.42812500018626454\tTest Cost: 1.4978426396846771\tLR: 0.0008\n",
-      "Current Iter : 14/30 batch : 3600/5000 acc : 0.32 cost : 1.7255648\r"
+      "Current: 14\tTrain Acc: 0.43899999871850015\tTrain Cost: 1.4835799646377563\tTest Acc: 0.4439999990165234\tTest Cost: 1.475997020304203\tLR: 0.0008\n",
+      "Current: 15\tTrain Acc: 0.456599999666214\tTrain Cost: 1.4393098449707031\tTest Acc: 0.45549999848008155\tTest Cost: 1.4462352447211742\tLR: 0.0008\n",
+      "Current Iter : 16/30 batch : 2300/5000 acc : 0.46 cost : 1.4898001\r"
      ]
     }
    ],
