Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -400,7 +400,17 @@
      "start_time": "2019-06-18T03:12:28.323Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current: 1\tTrain Acc: 0.10060000194609166\tTrain Cost: 2.308382503986359\tTest Acc: 0.09800000179558993\tTest Cost: 2.3022899413108826\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.10020000194013119\tTrain Cost: 2.301342582702637\tTest Acc: 0.10525000204332173\tTest Cost: 2.2960398411750793\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.1618000034093857\tTrain Cost: 2.150601535320282\tTest Acc: 0.21950000493787228\tTest Cost: 1.9301142306625843\tLR: 0.0008\n"
+     ]
+    }
+   ],
    "source": [
     "# start the training \n",
     "for iter in range(1,num_epoch+1):\n",
