Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -407,7 +407,15 @@
      "text": [
       "Current: 1\tTrain Acc: 0.10060000194609166\tTrain Cost: 2.308382503986359\tTest Acc: 0.09800000179558993\tTest Cost: 2.3022899413108826\tLR: 0.0008\n",
       "Current: 2\tTrain Acc: 0.10020000194013119\tTrain Cost: 2.301342582702637\tTest Acc: 0.10525000204332173\tTest Cost: 2.2960398411750793\tLR: 0.0008\n",
-      "Current: 3\tTrain Acc: 0.1618000034093857\tTrain Cost: 2.150601535320282\tTest Acc: 0.21950000493787228\tTest Cost: 1.9301142306625843\tLR: 0.0008\n"
+      "Current: 3\tTrain Acc: 0.1618000034093857\tTrain Cost: 2.150601535320282\tTest Acc: 0.21950000493787228\tTest Cost: 1.9301142306625843\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.3090000058710575\tTrain Cost: 1.768934475183487\tTest Acc: 0.3466250067949295\tTest Cost: 1.6419403368979693\tLR: 0.0008\n",
+      "Current: 5\tTrain Acc: 0.37140000680088997\tTrain Cost: 1.620253786087036\tTest Acc: 0.39200000677257774\tTest Cost: 1.569120520055294\tLR: 0.0008\n",
+      "Current: 6\tTrain Acc: 0.41160000656545165\tTrain Cost: 1.5298083525896073\tTest Acc: 0.39162500699982045\tTest Cost: 1.515861785709858\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.4320000065118074\tTrain Cost: 1.4772542484998703\tTest Acc: 0.44437500667758284\tTest Cost: 1.4520550356060267\tLR: 0.0008\n",
+      "Current: 8\tTrain Acc: 0.47320000621676445\tTrain Cost: 1.396662665963173\tTest Acc: 0.47100000685080884\tTest Cost: 1.426423358693719\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.49060000662505626\tTrain Cost: 1.350870617032051\tTest Acc: 0.45587500668130815\tTest Cost: 1.4235598660260438\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.510000006660819\tTrain Cost: 1.3024654772281647\tTest Acc: 0.4741250063665211\tTest Cost: 1.400718708448112\tLR: 0.0008\n",
+      "Current Iter : 11/30 batch : 3830/5000 acc : 0.6 cost : 1.05655795\r"
      ]
     }
    ],
