Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -114,9 +114,9 @@
     "y_test  = to_categorical(y_test-1)\n",
     "\n",
     "x_train = (x_train-x_train.min((1,2),keepdims=True))/(x_train.max((1,2),keepdims=True)-x_train.min((1,2),keepdims=True))\n",
-    "x_train = (x_train-x_train.mean((1,2),keepdims=True))/(x_train.std((1,2),keepdims=True))\n",
+    "# x_train = (x_train-x_train.mean((1,2),keepdims=True))/(x_train.std((1,2),keepdims=True))\n",
     "x_test = (x_test-x_test.min((1,2),keepdims=True))/(x_test.max((1,2),keepdims=True)-x_test.min((1,2),keepdims=True))\n",
-    "x_test = (x_test-x_test.mean((1,2),keepdims=True))/(x_test.std((1,2),keepdims=True))\n",
+    "# x_test = (x_test-x_test.mean((1,2),keepdims=True))/(x_test.std((1,2),keepdims=True))\n",
     "\n",
     "print(x_train.shape,y_train.shape,x_train.min(),x_train.max())\n",
     "print(x_test.shape,y_test.shape,x_test.min(),x_test.max())"
@@ -422,7 +422,13 @@
       "Current: 15\tTrain Acc: 0.5900000059306622\tTrain Cost: 1.1229998864531516\tTest Acc: 0.48350000655278563\tTest Cost: 1.4286211431398987\tLR: 0.0008\n",
       "Current: 16\tTrain Acc: 0.6046000055670738\tTrain Cost: 1.0799705172777176\tTest Acc: 0.5188750061020255\tTest Cost: 1.3114966948330402\tLR: 0.0008\n",
       "Current: 17\tTrain Acc: 0.6108000048696994\tTrain Cost: 1.053909294605255\tTest Acc: 0.5358750058431179\tTest Cost: 1.2734174015372992\tLR: 0.0008\n",
-      "Current: 18\tTrain Acc: 0.6258000050783157\tTrain Cost: 1.0201917319595815\tTest Acc: 0.5186250061262399\tTest Cost: 1.3383347922936082\tLR: 0.0008\n"
+      "Current: 18\tTrain Acc: 0.6258000050783157\tTrain Cost: 1.0201917319595815\tTest Acc: 0.5186250061262399\tTest Cost: 1.3383347922936082\tLR: 0.0008\n",
+      "Current: 19\tTrain Acc: 0.6398000046014786\tTrain Cost: 0.9795337556004524\tTest Acc: 0.5470000060740858\tTest Cost: 1.238426557444036\tLR: 0.0008\n",
+      "Current: 20\tTrain Acc: 0.6484000034332276\tTrain Cost: 0.9524756103754044\tTest Acc: 0.548125006435439\tTest Cost: 1.2564304250106215\tLR: 0.0008\n",
+      "Current: 21\tTrain Acc: 0.65840000385046\tTrain Cost: 0.9244997556060552\tTest Acc: 0.566625006441027\tTest Cost: 1.2378291765600442\tLR: 0.0008\n",
+      "Current: 22\tTrain Acc: 0.6728000028431416\tTrain Cost: 0.8979399315267801\tTest Acc: 0.557625005915761\tTest Cost: 1.2507725777477026\tLR: 0.0008\n",
+      "Current: 23\tTrain Acc: 0.6870000009834767\tTrain Cost: 0.8686775828897954\tTest Acc: 0.5435000064503401\tTest Cost: 1.3034214979782701\tLR: 0.0008\n",
+      "Current: 24\tTrain Acc: 0.6878000028431416\tTrain Cost: 0.837515396296978\tTest Acc: 0.5721250054799021\tTest Cost: 1.216827805712819\tLR: 0.0008\n"
      ]
     }
    ],
