Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -412,7 +412,15 @@
       "Current: 4\tTrain Acc: 0.21360000449419023\tTrain Cost: 2.042425344944\tTest Acc: 0.23200000506825746\tTest Cost: 2.0232622322440146\tLR: 0.0008\n",
       "Current: 5\tTrain Acc: 0.25360000516474246\tTrain Cost: 1.9889503285884857\tTest Acc: 0.27200000555254517\tTest Cost: 1.9133829590678215\tLR: 0.0008\n",
       "Current: 6\tTrain Acc: 0.28260000571608546\tTrain Cost: 1.8945440742969513\tTest Acc: 0.287875005742535\tTest Cost: 1.8579133090376854\tLR: 0.0008\n",
-      "Current Iter : 7/30 batch : 4980/5000 acc : 0.3 cost : 1.9445384\r"
+      "Current: 7\tTrain Acc: 0.29640000604093075\tTrain Cost: 1.863736095905304\tTest Acc: 0.29212500614114106\tTest Cost: 1.8648513899743557\tLR: 0.0008\n",
+      "Current: 8\tTrain Acc: 0.29760000616312027\tTrain Cost: 1.8388568265438079\tTest Acc: 0.31862500619143247\tTest Cost: 1.8288014756143094\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.3092000062465668\tTrain Cost: 1.8227918815612794\tTest Acc: 0.32187500638887284\tTest Cost: 1.825847093909979\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.3206000064313412\tTrain Cost: 1.8054839477539062\tTest Acc: 0.3252500062435865\tTest Cost: 1.8008038793504237\tLR: 0.0008\n",
+      "Current: 11\tTrain Acc: 0.3346000069081783\tTrain Cost: 1.7916088918447495\tTest Acc: 0.32600000673905016\tTest Cost: 1.784998581558466\tLR: 0.0008\n",
+      "Current: 12\tTrain Acc: 0.33140000587701796\tTrain Cost: 1.786951891541481\tTest Acc: 0.33875000638887287\tTest Cost: 1.7882733207195998\tLR: 0.0008\n",
+      "Current: 13\tTrain Acc: 0.3402000057995319\tTrain Cost: 1.7736514415740967\tTest Acc: 0.35150000647641716\tTest Cost: 1.7777504377067088\tLR: 0.0008\n",
+      "Current: 14\tTrain Acc: 0.3430000062286854\tTrain Cost: 1.7678694591522217\tTest Acc: 0.32375000619329514\tTest Cost: 1.79254359588027\tLR: 0.0008\n",
+      "Current Iter : 15/30 batch : 800/5000 acc : 0.5 cost : 1.2861192\r"
      ]
     }
    ],
