Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -166,7 +166,7 @@
     "    def __init__(self,k,inc,out,act=tf_elu,d_act=d_tf_elu):\n",
     "        self.padding    = 'SAME'\n",
     "        self.stride     = 1\n",
-    "        self.w          = tf.Variable(tf.random_normal([k,k,inc,out],stddev=0.05))\n",
+    "        self.w          = tf.Variable(tf.random_normal([k,k,inc,out],stddev=0.05,seed=567))\n",
     "        self.m,self.v   = tf.Variable(tf.zeros_like(self.w)),tf.Variable(tf.zeros_like(self.w))\n",
     "        self.act,self.d_act = act,d_act\n",
     "        \n",
@@ -420,7 +420,9 @@
       "Current: 12\tTrain Acc: 0.33140000587701796\tTrain Cost: 1.786951891541481\tTest Acc: 0.33875000638887287\tTest Cost: 1.7882733207195998\tLR: 0.0008\n",
       "Current: 13\tTrain Acc: 0.3402000057995319\tTrain Cost: 1.7736514415740967\tTest Acc: 0.35150000647641716\tTest Cost: 1.7777504377067088\tLR: 0.0008\n",
       "Current: 14\tTrain Acc: 0.3430000062286854\tTrain Cost: 1.7678694591522217\tTest Acc: 0.32375000619329514\tTest Cost: 1.79254359588027\tLR: 0.0008\n",
-      "Current Iter : 15/30 batch : 800/5000 acc : 0.5 cost : 1.2861192\r"
+      "Current: 15\tTrain Acc: 0.3454000062197447\tTrain Cost: 1.764494302034378\tTest Acc: 0.35412500649690626\tTest Cost: 1.7631577655673027\tLR: 0.0008\n",
+      "Current: 16\tTrain Acc: 0.3490000064522028\tTrain Cost: 1.7472500807046891\tTest Acc: 0.3480000063590705\tTest Cost: 1.774267870336771\tLR: 0.0008\n",
+      "Current Iter : 17/30 batch : 150/5000 acc : 0.4 cost : 1.4094752\r"
      ]
     }
    ],
