Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -326,10 +326,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:26:53.226Z"
+     "end_time": "2019-06-18T03:26:54.442361Z",
+     "start_time": "2019-06-18T03:26:53.720261Z"
     }
    },
    "outputs": [],
@@ -399,7 +400,16 @@
      "start_time": "2019-06-18T03:26:53.793Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current: 1\tTrain Acc: 0.1145999999716878\tTrain Cost: 2.311267759799957\tTest Acc: 0.13700000003445895\tTest Cost: 2.3021641105413435\tLR: 0.0008\n",
+      "Current Iter : 2/30 batch : 7650/8000 acc : 0.12 cost : 2.1090112\r"
+     ]
+    }
+   ],
    "source": [
     "# start the training \n",
     "for iter in range(1,num_epoch+1):\n",
