Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -406,7 +406,18 @@
      "output_type": "stream",
      "text": [
       "Current: 1\tTrain Acc: 0.1145999999716878\tTrain Cost: 2.311267759799957\tTest Acc: 0.13700000003445895\tTest Cost: 2.3021641105413435\tLR: 0.0008\n",
-      "Current Iter : 2/30 batch : 7650/8000 acc : 0.12 cost : 2.1090112\r"
+      "Current: 2\tTrain Acc: 0.12259999975562096\tTrain Cost: 2.2534294176101684\tTest Acc: 0.1565000003669411\tTest Cost: 2.172299525141716\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.14459999985992908\tTrain Cost: 2.1652973175048826\tTest Acc: 0.16199999931268394\tTest Cost: 2.157138021290302\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.12339999958872795\tTrain Cost: 2.15622917175293\tTest Acc: 0.13662500001955777\tTest Cost: 2.153741845488548\tLR: 0.0008\n",
+      "Current: 5\tTrain Acc: 0.12779999986290932\tTrain Cost: 2.1540290832519533\tTest Acc: 0.12962499987334014\tTest Cost: 2.149789135158062\tLR: 0.0008\n",
+      "Current: 6\tTrain Acc: 0.1310000002756715\tTrain Cost: 2.148848863840103\tTest Acc: 0.13425000000279397\tTest Cost: 2.1399195209145545\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.1741999999433756\tTrain Cost: 2.1405778980255126\tTest Acc: 0.18500000024214386\tTest Cost: 2.124657954275608\tLR: 0.0008\n",
+      "Current: 8\tTrain Acc: 0.1981999998167157\tTrain Cost: 2.1236392855644226\tTest Acc: 0.20512499955948443\tTest Cost: 2.105368559807539\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.20400000058114529\tTrain Cost: 2.115155349969864\tTest Acc: 0.21499999982770532\tTest Cost: 2.099807009100914\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.22040000081062316\tTrain Cost: 2.0977988982200624\tTest Acc: 0.22274999991059302\tTest Cost: 2.0958452351391315\tLR: 0.0008\n",
+      "Current: 11\tTrain Acc: 0.21400000002235176\tTrain Cost: 2.0994870138168333\tTest Acc: 0.2301249995827675\tTest Cost: 2.082692737132311\tLR: 0.0008\n",
+      "Current: 12\tTrain Acc: 0.23879999920725822\tTrain Cost: 2.0399101519584657\tTest Acc: 0.2589999998919666\tTest Cost: 1.999423661828041\tLR: 0.0008\n",
+      "Current Iter : 13/30 batch : 3250/8000 acc : 0.16 cost : 2.0043032\r"
      ]
     }
    ],
