Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -379,10 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:26:53.522Z"
+     "end_time": "2019-06-18T03:26:55.541653Z",
+     "start_time": "2019-06-18T03:26:54.651311Z"
     }
    },
    "outputs": [],
@@ -394,10 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T03:26:53.793Z"
+     "end_time": "2019-06-18T03:32:29.215865Z",
+     "start_time": "2019-06-18T03:26:55.743117Z"
     }
    },
    "outputs": [
@@ -428,7 +430,13 @@
       "Current: 21\tTrain Acc: 0.3076000016927719\tTrain Cost: 1.9080435132980347\tTest Acc: 0.3027499994728714\tTest Cost: 1.8999047882854938\tLR: 0.0008\n",
       "Current: 22\tTrain Acc: 0.30639999896287917\tTrain Cost: 1.9007921135425567\tTest Acc: 0.3128749997820705\tTest Cost: 1.8801970846951008\tLR: 0.0008\n",
       "Current: 23\tTrain Acc: 0.3170000021159649\tTrain Cost: 1.887483971118927\tTest Acc: 0.3165000000037253\tTest Cost: 1.8734705336391926\tLR: 0.0008\n",
-      "Current Iter : 24/30 batch : 4200/5000 acc : 0.2 cost : 1.96643955\r"
+      "Current: 24\tTrain Acc: 0.31280000165104865\tTrain Cost: 1.8937060856819152\tTest Acc: 0.3122500010766089\tTest Cost: 1.8827659599483013\tLR: 0.0008\n",
+      "Current: 25\tTrain Acc: 0.3020000010728836\tTrain Cost: 1.905749053955078\tTest Acc: 0.32000000057742\tTest Cost: 1.8838155761361122\tLR: 0.0008\n",
+      "Current: 26\tTrain Acc: 0.3210000021755695\tTrain Cost: 1.8834611105918884\tTest Acc: 0.3171250009909272\tTest Cost: 1.8698981061577797\tLR: 0.0008\n",
+      "Current: 27\tTrain Acc: 0.33259999975562093\tTrain Cost: 1.863142293691635\tTest Acc: 0.3245000009424984\tTest Cost: 1.8856544464826583\tLR: 0.0008\n",
+      "Current: 28\tTrain Acc: 0.32760000064969064\tTrain Cost: 1.8643174183368683\tTest Acc: 0.3285000012256205\tTest Cost: 1.8541592232882977\tLR: 0.0008\n",
+      "Current: 29\tTrain Acc: 0.32980000048875807\tTrain Cost: 1.8598072302341462\tTest Acc: 0.3358750011771917\tTest Cost: 1.8589023768901825\tLR: 0.0008\n",
+      "Current: 30\tTrain Acc: 0.33659999996423723\tTrain Cost: 1.8510540986061097\tTest Acc: 0.3352500008419156\tTest Cost: 1.8542328149080276\tLR: 0.0008\n"
      ]
     }
    ],
